fix(locking): make the lock token detect content edits; protect service agreements
Review of the optimistic-locking work against issue #134 surfaced two ways the
lock could fail open, plus three gaps in coverage.

The lock token never moved on a content-only edit. getRevisions(name) is
`git log -- <path>`, which applies ANY_DIFF history simplification: a commit
that rewrites a path with byte-identical content produces no diff for it and
never appears in that path's log. A plain metadata edit changes .raw but
re-serialises .meta unchanged, so a token read from .meta alone stayed put and
the compare-then-commit check passed for a stale editor -- issue #134's own
reproduction still lost the first user's edit. The token is now the pair,
"<.meta revision>:<.raw revision>", so a change to either half moves it. The
single-file getDocumentRevisionId is removed rather than deprecated: a public
method that silently fails open invites the bug back.

A stale PUT returned 500 rather than 409 unless the client sent a matching
Accept. When an @ExceptionHandler returns a body no converter can write,
Spring abandons the handler and rethrows the original exception. Accept: */*
-- curl's default, and what the worked example in docs/api.md sends -- hit
exactly that, so the documented 409 contract broke precisely when the user's
unsaved submission needed echoing back. The conflict response now pins
application/json so Spring writes with that converter and skips negotiation.
The browser editor was unaffected, which is why this went unnoticed.

The service-agreement editor was unprotected. It is a long depositor session
saved repeatedly, so it is an editing session in the sense the design note
describes, but only the one-shot publishServiceAgreement transition had been
considered. Its GETs now emit an ETag, both PUTs require If-Match, and the
compare-then-commit lives in GitRepoServiceAgreementService, which commits
directly to the datastore rather than through DocumentRepository. No clie